@@ -21,7 +21,7 @@ class SequenceEngineTest {
                 new Detection(4, "AA1111", 1003, 90, LocalDateTime.of(2026, 3, 1, 10, 20))
         );
 
-        SequenceRecord record = sequenceEngine.build(detections, TestConfigFactory.config()).getFirst();
+        SequenceRecord record = sequenceEngine.build(detections, TestConfigFactory.config(), LocalDateTime.of(2026, 3, 1, 12, 0)).getFirst();
 
         assertThat(record.stagesChronologically()).hasSize(3);
         assertThat(record.stagesChronologically().get(0).stageName()).isEqualTo("drive_in");
@@ -29,38 +29,41 @@ class SequenceEngineTest {
         assertThat(record.stagesChronologically().get(1).partial()).isTrue();
         assertThat(record.stagesChronologically().get(1).timeIn()).isNull();
         assertThat(record.stagesChronologically().get(2).stageName()).isEqualTo("service");
+        assertThat(record.isClosed()).isFalse();
     }
 
     @Test
-    void materializesTransitionalStageAfterTimeout() {
+    void materializesTransitionalStageAfterTimeoutWithoutDuplicatingSameBackyard() {
         List<Detection> detections = List.of(
                 new Detection(1, "AA1111", 1001, 10, LocalDateTime.of(2026, 3, 1, 10, 0)),
                 new Detection(2, "AA1111", 1008, null, LocalDateTime.of(2026, 3, 1, 10, 5)),
-                new Detection(3, "AA1111", 1003, 90, LocalDateTime.of(2026, 3, 1, 10, 8))
+                new Detection(3, "AA1111", 1008, null, LocalDateTime.of(2026, 3, 1, 10, 6)),
+                new Detection(4, "AA1111", 1003, 90, LocalDateTime.of(2026, 3, 1, 10, 9))
         );
 
-        SequenceRecord record = sequenceEngine.build(detections, TestConfigFactory.config()).getFirst();
+        SequenceRecord record = sequenceEngine.build(detections, TestConfigFactory.config(), LocalDateTime.of(2026, 3, 1, 12, 0)).getFirst();
 
         assertThat(record.stagesChronologically()).extracting(SequenceRecord.StageWindow::stageName)
                 .containsExactly("drive_in", "backyard", "service");
         assertThat(record.stagesChronologically().get(1).stageType()).isEqualTo(SequenceRecord.StageType.TRANSITIONAL);
         assertThat(record.stagesChronologically().get(1).timeIn()).isEqualTo(LocalDateTime.of(2026, 3, 1, 10, 5));
-        assertThat(record.stagesChronologically().get(1).timeOut()).isEqualTo(LocalDateTime.of(2026, 3, 1, 10, 8));
+        assertThat(record.stagesChronologically().get(1).timeOut()).isEqualTo(LocalDateTime.of(2026, 3, 1, 10, 9));
     }
 
     @Test
-    void splitsSingleCameraStageWhenGapExceedsTimeout() {
+    void keepsSingleCameraStageOpenUntilReportTimeAndAggregatesRepeatedDetections() {
         List<Detection> detections = List.of(
                 new Detection(1, "AA1111", 1101, null, LocalDateTime.of(2026, 3, 1, 9, 0)),
                 new Detection(2, "AA1111", 1101, null, LocalDateTime.of(2026, 3, 1, 9, 0, 10)),
-                new Detection(3, "AA1111", 1101, null, LocalDateTime.of(2026, 3, 1, 9, 1))
+                new Detection(3, "AA1111", 1101, null, LocalDateTime.of(2026, 3, 1, 9, 0, 20))
         );
 
-        SequenceRecord record = sequenceEngine.build(detections, TestConfigFactory.config()).getFirst();
+        SequenceRecord record = sequenceEngine.build(detections, TestConfigFactory.config(), LocalDateTime.of(2026, 3, 1, 9, 0, 40)).getFirst();
 
-        assertThat(record.stagesChronologically()).hasSize(2);
-        assertThat(record.stagesChronologically().get(0).timeIn()).isEqualTo(LocalDateTime.of(2026, 3, 1, 9, 0));
-        assertThat(record.stagesChronologically().get(0).timeOut()).isEqualTo(LocalDateTime.of(2026, 3, 1, 9, 0, 10));
-        assertThat(record.stagesChronologically().get(1).timeIn()).isEqualTo(LocalDateTime.of(2026, 3, 1, 9, 1));
+        assertThat(record.stagesChronologically()).hasSize(1);
+        assertThat(record.stagesChronologically().getFirst().timeIn()).isEqualTo(LocalDateTime.of(2026, 3, 1, 9, 0));
+        assertThat(record.stagesChronologically().getFirst().timeOut()).isNull();
+        assertThat(record.stagesChronologically().getFirst().lastSeenAt()).isEqualTo(LocalDateTime.of(2026, 3, 1, 9, 0, 20));
+        assertThat(record.isClosed()).isFalse();
     }
 }
